fix ghost scrollbar below data table

--- a/censusreporter/apps/census/static/css/app.css
+++ b/censusreporter/apps/census/static/css/app.css
@@ -765,7 +765,7 @@ section aside sup {
 }
 .data-drawer {
     padding: 1.5em 0 0;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 .data-drawer th {
     border-left: 5px solid #fff;
